# uuid

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  conanfile.py  meson.build  meson_options.txt  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_issue.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-docs.yml
benchmarks/: CMakeLists.txt  bench_uuid.c
cmake/: uuid-config.cmake.in  uuid.pc.in
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/api/: byte-access.md  comparison.md  errors.md  formatting.md  generation.md  hashing.md  initialization.md  namespaces.md  overview.md  parsing.md  serialization.md  sorting.md  validation.md  version.md
docs/contributing/: index.md
docs/examples/: basic.md  binary-conversion.md  comparison.md  custom-uuid.md  error-handling.md  formatting.md  index.md  parsing.md  serialization.md  threading.md  v1.md  v3.md  v4.md  v5.md  v6.md  v7.md  v8.md  validation.md
docs/faq/: index.md
docs/guide/: advanced.md  cpp-compat.md  getting-started.md  installation.md  memory.md  overview.md  performance.md  platforms.md  quick-start.md  thread-safety.md
docs/public/: manifest.json
docs/security/: index.md
docs/uuid/: namespaces.md  overview.md  special.md  v1.md  v3.md  v4.md  v5.md  v6.md  v7.md  v8.md
examples/: CMakeLists.txt  basic.c  binary_conversion.c  comparison.c  custom_uuid.c  error_handling.c  formatting.c  parsing.c  serialization.c  threading.c  v1.c  v3.c  v4.c  v5.c  v6.c  v7.c  v8.c  validation.c
include/uuid/: uuid.h
src/: uuid.c
tests/: CMakeLists.txt  test_uuid.c
